--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.5.0",
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-sass": "~0.8.1",
     "grunt-contrib-watch": "~0.4.4",
+    "grunt-sass": "^0.18.0",
     "grunt-sassdoc": "^2.0.0"
   }
 }
